<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:weightSum="3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#efefef">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="12dp"
            android:src="@drawable/back"/>
        <ImageView
            android:id="@+id/item_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ferrero"/>
        <TextView
            android:id="@+id/item_name"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enchated Forest"/>
        <ImageView
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_star"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="12dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp">
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#D5000000"
                    android:text="¥ 5.00"
                    android:layout_alignParentTop="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_marginTop="8dp"
                        android:textColor="#D5000000"
                        android:text="重量"
                        android:layout_alignParentBottom="true"/>
                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:layout_marginTop="8dp"
                        android:textColor="#D5000000"
                        android:text="300g"
                        android:layout_marginLeft="4dp"
                        android:layout_alignParentBottom="true"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:layout_marginRight="20dp">
                <View
                android:layout_width="1dp"
                android:layout_margin="16dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:background="#1E000000"/>
                <ImageView
                    android:id="@+id/shop"
                    android:layout_width="28dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/shoplist"/>
            </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.55"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_item_info"
            android:textColor="#D5000000"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="#D5000000"
            android:textSize="20dp"
            android:text="@string/oneclick_order"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="#D5000000"
            android:textSize="20dp"
            android:text="@string/share_item"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="#D5000000"
            android:textSize="20dp"
            android:text="@string/has_no_interest"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="#D5000000"
            android:textSize="20dp"
            android:text="@string/find_more_items"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentBottom="true"
            android:background="#1E000000"/>
    </LinearLayout>
</LinearLayout>